# pydantic-ai-playground

./: .env.example  DEMO-DATA-IMPLEMENTATION.md  README.md  main.py  pyproject.toml  start.sh  test_agui_web_search.py  test_anthropic_memory.py  test_chatkit.py  test_comprehensive.py  test_debug_tools.py  test_mcp_tools.py  test_memory.py  test_memory_debug.py  test_openai_web_search.py  test_tool.json  test_web_search.py  test_xml_config.py  vibecoding.md
chatkit/: __init__.py  config.xml  config.yaml  core.py  main.py  mcp_server.py  memory.py  tools.py  web.py  workflows.py
docs/: ai-elements-integration-summary.md  ai_elements.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css
frontend/app/dashboard/: page.tsx
frontend/app/monitor/: page.tsx
frontend/components/: app-sidebar.tsx
frontend/components/ai-elements/: prompt-input.tsx
frontend/components/monitor/: agent-node.tsx  event-node.tsx  tool-node.tsx
frontend/hooks/: use-ag-ui-chat.ts  use-ag-ui-memory.ts  use-ag-ui-monitor.ts  use-ag-ui-session.ts
frontend/lib/: ag-ui-client.ts  demo-ag-ui-data.json  demo-ag-ui-loader.ts
frontend/lib/layout/: dagre.ts
memory/: chat_memory.json
