[project]
name = "pydantic-ai-playground"
version = "0.1.0"
description = "ChatKit-like interface with pydantic-ai and multi-agent workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai[examples]>=1.6.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "ruff>=0.14.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
chatkit = "chatkit.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chatkit"]

[tool.uv]
package = true
